# evolution-project

./: .gitignore  QUICKSTART.md  README.md  dashboard-v2.py  dashboard.py  implementation-guide.md  project-definition.md  pyproject.toml  requirements.txt  run_all.py  run_simulation.py  terminal_view.py  test
.devcontainer/: devcontainer.json
.streamlit/: config.toml
notebooks/: 01_eda.py  02_ml_survival.py
outputs/: .gitkeep
simulation/: creature.py  environment.py  evolution_engine.py
